--- a/internal/package.json
+++ b/internal/package.json
@@ -31,7 +31,9 @@
     "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "kafkajs": "^2.2.4",
     "pg": "^8.16.0",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.24"
   }
 }
