--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   kafka:
     image: bitnami/kafka:3.5
@@ -16,6 +14,7 @@ services:
       KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_CFG_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       ALLOW_PLAINTEXT_LISTENERS: 'yes'
+      KAFKA_CFG_NUM_PARTITIONS: 3
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     depends_on:
