--- a/internal/package.json
+++ b/internal/package.json
@@ -33,6 +33,7 @@
     "express": "^5.1.0",
     "kafkajs": "^2.2.4",
     "pg": "^8.16.0",
+    "redis": "^5.5.6",
     "socket.io": "^4.8.1",
     "typeorm": "^0.3.24"
   }
