--- a/deployment/kafka/ui.yaml
+++ b/deployment/kafka/ui.yaml
@@ -33,6 +33,13 @@ spec:
           image: provectuslabs/kafka-ui:latest
           ports:
             - containerPort: 8080
+          resources:
+            requests:
+              cpu: 500m
+              memory: 512Mi
+            limits:
+              cpu: 750m
+              memory: 768Mi
           env:
             - name: KAFKA_CLUSTERS_0_NAME
               value: managed-a
