--- a/deployment/services/writer.yaml
+++ b/deployment/services/writer.yaml
@@ -1,25 +1,31 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: writer-headless
+  namespace: default
+spec:
+  selector:
+    app: writer
+  type: ClusterIP
+  clusterIP: None
+---
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: writer
   namespace: default
-  labels:
-    app: writer
 spec:
   selector:
     matchLabels:
       app: writer
+  serviceName: writer-headless
   replicas: 1
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
       labels:
         app: writer
     spec:
+      terminationGracePeriodSeconds: 10
       containers:
         - name: writer
           image: localhost:32000/chat-writer:latest
@@ -37,4 +43,13 @@ spec:
                 name: kafka-a-connection
             - configMapRef:
                 name: redis-connection
+          env:
+            - name: KAFKA_CLIENT_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: KAFKA_GROUP_ID
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.labels['app']
       restartPolicy: Always
