--- a/deployment/services/writer.yaml
+++ b/deployment/services/writer.yaml
@@ -1,25 +1,20 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: writer-headless
-  namespace: default
-spec:
-  selector:
-    app: writer
-  type: ClusterIP
-  clusterIP: None
----
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   name: writer
   namespace: default
+  labels:
+    app: writer
 spec:
   selector:
     matchLabels:
       app: writer
-  serviceName: writer-headless
   replicas: 3
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
