feat: Implement Redis leader election for synchronizer
Add Redis-based leader election mechanism to ensure only one synchronizer sends messages at a time. Update README.md with new problem and solution details. Include necessary environment variables for election configuration.

--- a/deployment/services/synchronizer.yaml
+++ b/deployment/services/synchronizer.yaml
@@ -32,6 +32,8 @@ spec:
               memory: 300Mi
           envFrom:
             - configMapRef:
+                name: redis-connection
+            - configMapRef:
                 name: kafka-a-connection
           env:
             - name: WS_HOST
@@ -40,4 +42,8 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+            - name: ELECTION_LOCK_KEY
+              value: lock:synchronizer-election
+            - name: ELECTION_TTL
+              value: "10000"
       restartPolicy: Always
