feat: Reduce duplicate messages sent in Kafka
Instead of sending all messages to Kafka when they arrive, send only those with an updatedAt time larger than the max we already sent (- a small offset to ignore clock skew)

--- a/deployment/services/synchronizer.yaml
+++ b/deployment/services/synchronizer.yaml
@@ -42,8 +42,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
-            - name: ELECTION_LOCK_KEY
-              value: lock:synchronizer-election
-            - name: ELECTION_TTL
-              value: "10000"
+            - name: MESSAGE_MAX_UPDATE_TIME_OFFSET_SECONDS
+              value: "60"
+            # - name: ELECTION_LOCK_KEY
+            #   value: lock:synchronizer-election
+            # - name: ELECTION_TTL
+            #   value: "30000"
       restartPolicy: Always
